bynkc/tests/fixtures/positive/189_bynk_node_platform/src/ids/gen.bynk
context ids.gen

consumes bynk { Clock, Secrets }

service stamp {
  on call() -> Effect[Int] given Clock, Secrets {
    let salt <- Secrets.get("STAMP_SALT")
    let now <- Clock.now()
    match salt {
      Some(_) => now.toEpochMillis() + 1,
      None => now.toEpochMillis(),
    }
  }
}
