bynkc/tests/fixtures/negative/375_test_call_wrong_arity/src/demo/svc.bynk
context demo.svc

service echo {
  on call(x: Int) -> Effect[Int] {
    x + 1
  }
}
